--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
+        <h1>Tabela IMC</h1>
+        <section class="titulo">
+            <div class="imc">
+                <h3>IMC</h3>
+                <p>Menos do que 18,5</p>
+                <p>Enter 18,5 e 24,9</p>
+                <p>Entre 25 e 29,9</p>
+                <p>Entre 30 e 34,5</p>
+                <p>Entre 35 e 39,9</p>
+                <p>Superior a 40</p>
+            </div>
+            <div class="resultado">
+                <h3>Resultado</h3>
+                <p>Abaixo do peso</p>
+                <p>Peso Normal</p>
+                <p>Sobrepeso</p>
+                <p>Obesidade grau 1</p>
+                <p>Obesidade grau 2</p>
+                <p>Obesidade grau 3</p>
+            </div>
+        </section>
+        <h1>Calcule seu IMC</h1>
+        <section class="calculo">
+            <form action="/" id="form">
+                <label for="peso">Peso:</label>
+                <input type="text" id="peso">
+                <label for="altura">Altura</label>
+                <input type="text" id="altura">
+                <button type="submit">Calcular</button>
+            </form>
+        </section>
+        <div id="resultado"></div>
+    </main>
     <script src="main.js"></script>
 </body>
 </html>
